package com.thoughtworks.leanengine.domain.workflowcontext.trigger;

public interface WorkflowTrigger {
  void runJob();
}
