@startuml

interface WorkflowTrigger{
  void trigger()
}

Class WorkflowExecution{
    LocalDateTime startTime
    LocalDateTime endTime
    String id
    WorkflowResult executeResult
}

class Workflow{
    WorkflowExecutionStatus status
    LocalDateTime startupTime;
    LocalDateTime lastRunTime;
    LocalDateTime endTime;
    Component lastRunComponent;
    void execute()
}

class ComponentResult{
    String name;
    String componentPath;
    KeyValuePair data;
}

'Abstract Class Activity{
'    String name
'    LocalDateTime startTime
'    LocalDateTime endTime
'    ActivityStatus status
'}

WorkflowExecution *--> WorkflowResult
WorkflowResult "1" *--> "[1..N]" ComponentResult

Workflow "1" o--> "0...*" WorkflowExecution
'Activity "1" *-->  "[1...*]" Job

'Job *--> WorkflowContext
'Job *--> WorkflowResult

'WorkflowRuntimeEngine *--> WorkflowInstanceScheduler
'WorkflowRuntimeEngine *-> Job

Workflow *--> WorkflowTrigger

WorkflowTrigger <|.. CommandJobTrigger
WorkflowTrigger <|.. CronJobTrigger
WorkflowTrigger <|.. ComponentEventTrigger
WorkflowTrigger <|.. ComponentStatusTrigger

'WorkflowTrigger *-->  WorkflowInstanceScheduler

@enduml